--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -84,7 +84,7 @@
   font-size: 11px;
   letter-spacing: 1px;
   opacity: 1;
-  transition: 3s;
+  transition: 2s;
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -167,8 +167,8 @@
 .line {
   height: 100%;
   width: 1px;
-  background-color: rgb(177, 177, 177);
-  transition: 0.8s;
+  background-color: rgb(202, 202, 202);
+  transition: 1.5s ease-in-out;
 }
 .landing-line-one,
 .landing-line-eight {
@@ -185,4 +185,23 @@
   width: 100%;
   height: 1px;
   background-color: black;
+  transition: 1.5s ease-in-out;
+  position: relative;
+}
+
+.false-line {
+  height: 0%;
+}
+.false-line-horizontal {
+  width: 0%;
+}
+
+.cover-lines-after-animation {
+  width: 100%;
+  height: 91.1vh;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background-color: white;
+  transition: 3s;
 }
