--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -7,6 +7,8 @@
   padding-bottom: 15px;
   background-color: white;
   z-index: 3;
+  opacity: 1;
+  transition: 1s;
 }
 .nav-inner {
   width: 80%;
@@ -47,4 +49,8 @@
   height: 1px;
   background-color: black;
   transition: 0.3s;
+}
+
+.transparent {
+  opacity: 0;
 }
