--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -140,7 +140,7 @@
   width: 100%;
   height: 100vh;
   margin-top: 6vh;
-  background-image: url("../assets/images/19.jpg");
+  background-image: url("../assets/images/1.jpeg");
   background-size: cover;
   background-position: bottom;
   background-repeat: none;
