--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -23,7 +23,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border: 1px solid black;
+  margin-left: 50px;
+  scale: 0.8;
 }
+
 .nav-sub {
   margin-top: 5px;
   height: 50%;
