--- a/src/styles/ProjectOne.css
+++ b/src/styles/ProjectOne.css
@@ -1,3 +1,25 @@
+@keyframes fadeIn {
+  0% {
+    top: 100%;
+  }
+  100% {
+    top: 0%;
+  }
+}
+
+.heading-letter-container {
+  overflow: hidden;
+}
+
+.heading-letter {
+  top: 100%;
+  animation: fadeIn ease 0.8s;
+  animation-fill-mode: forwards;
+  position: relative;
+  text-transform: uppercase;
+  font-size: 160px;
+}
+
 .project-one-outer {
   width: 100%;
   height: 80vh;
