--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,5 +1,50 @@
+body {
+  background-color: #3a3a1f;
+}
 .projects-outer {
   width: 100%;
   height: 100vh;
-  background-color: gray;
+  color: #cfcfb0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.project-left,
+.project-right {
+  width: 50%;
+  height: 100%;
+}
+.project-wheel-outer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.project-wheel-inner {
+  width: 200px;
+  height: 200px;
+  /* border: 4px dashed #cfcfb0;
+   */
+  /* border-radius: 50%; */
+  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23CFCFB0FF' stroke-width='4' stroke-dasharray='720%2c 700' stroke-dashoffset='86' stroke-linecap='butt'/%3e%3c/svg%3e");
+  border-radius: 100px;
+  scale: 2;
+  transition: 0.3s;
+  position: fixed;
+}
+.project-right {
+  height: 2000px;
+  background-color: #cfcfb0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.row {
+  width: 80%;
+  height: 200px;
+  background-color: white;
+  margin: 50px;
 }
