--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -30,7 +30,7 @@ body {
   background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23CFCFB0FF' stroke-width='4' stroke-dasharray='720%2c 700' stroke-dashoffset='86' stroke-linecap='butt'/%3e%3c/svg%3e");
   border-radius: 100px;
   scale: 2;
-  transition: 0.3s;
+  /* transition: 0.3s; */
   position: fixed;
 }
 .project-right {
