--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -14,25 +14,6 @@ body {
   width: 50%;
   height: 100%;
 }
-.project-wheel-outer {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.project-wheel-inner {
-  width: 200px;
-  height: 200px;
-  /* border: 4px dashed #cfcfb0;
-   */
-  /* border-radius: 50%; */
-  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%23CFCFB0FF' stroke-width='4' stroke-dasharray='720%2c 700' stroke-dashoffset='86' stroke-linecap='butt'/%3e%3c/svg%3e");
-  border-radius: 100px;
-  scale: 2;
-  /* transition: 0.3s; */
-  position: fixed;
-}
 .project-right {
   height: 2000px;
   background-color: #cfcfb0;
@@ -47,4 +28,30 @@ body {
   height: 200px;
   background-color: white;
   margin: 50px;
+}
+
+.project-wheel-outer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* .project-wheel-inner {
+  width: 400px;
+  height: 400px;
+  border: 4px solid #cfcfb0;
+  border-radius: 50%;
+  position: fixed;
+} */
+.project-wheel-outer .percent svg circle {
+  width: 150px;
+  height: 150px;
+  fill: none;
+  stroke-width: 10;
+  stroke: #000;
+  transform: translate(5px, 5px);
+  stroke-dasharray: 440;
+  stroke-dashoffset: 200;
+  transition: 0.3s;
 }
