--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -37,24 +37,20 @@ body {
   align-items: center;
   justify-content: center;
 }
-/* .project-wheel-inner {
-  width: 400px;
-  height: 400px;
-  border: 4px solid #cfcfb0;
-  border-radius: 50%;
-  position: fixed;
-} */
 svg {
-  height: 500px;
-  width: 500px;
+  height: 800px;
+  width: 800px;
   transform: rotate(-90deg);
   display: flex;
   align-items: center;
   justify-content: center;
+  position: fixed;
+  left: 0px;
+  top: 100px;
 }
 circle {
   stroke: #cfcfb0;
-  stroke-width: 5;
+  stroke-width: 2;
   fill: none;
   transition: 0.8s;
   stroke-dasharray: 563;
