--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -16,7 +16,7 @@ body {
   background-color: #3a3a1f;
 }
 .project-right {
-  background-color: #cfcfb0;
+  background-color: #3a3a1f;
   height: 4000px;
   display: flex;
   flex-wrap: wrap;
@@ -26,13 +26,15 @@ body {
   position: absolute;
   width: 500px;
   left: 700px;
-  z-index: -1;
+  z-index: 2;
 }
-.row {
-  width: 80%;
-  height: 400px;
-  background-color: white;
-  margin: 50px;
+.project-far-right {
+  background-color: #3a3a1f;
+  position: fixed;
+  right: 0px;
+  height: 100vh;
+  width: 50%;
+  z-index: -1;
 }
 
 .project-wheel-outer {
@@ -80,6 +82,7 @@ circle {
 }
 .bubble:hover {
   background-color: #cfcfb0;
+  cursor: pointer;
 }
 .circle-one {
   left: 260px;
@@ -113,4 +116,51 @@ circle {
 .number-true {
   color: #3a3a1f;
   scale: 0.7;
+}
+
+.row {
+  width: 100%;
+  height: 16.65%;
+  margin: 0px;
+  border-bottom: 1px solid #69694e;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.5s;
+}
+.row-inner {
+  width: 80%;
+  height: 10%;
+}
+.head {
+  font-size: 20px;
+}
+.s-head {
+  font-size: 15px;
+  margin-top: 15px;
+}
+.falsey {
+  border-bottom: 1px solid #69694e;
+  color: #69694e;
+}
+.pictures {
+  width: 80px;
+  border: 1px solid #cfcfb0;
+  border-radius: 10px;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s;
+}
+.pictures:hover {
+  color: #3a3a1f;
+  background-color: #cfcfb0;
+  cursor: pointer;
+}
+.false {
+  border: 1px solid #69694e;
+}
+.row-inner-one {
+  height: 60%;
 }
