--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -164,3 +164,30 @@ circle {
 /* .row-inner-one {
   height: 60%;
 } */
+.pictures-true {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.568);
+  z-index: 3;
+}
+.back-button {
+  width: 80px;
+  height: 30px;
+  background-color: rgba(255, 255, 255, 0.863);
+  border: 1px solid black;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  position: fixed;
+  left: 100px;
+  top: 100px;
+  transition: 0.3s;
+}
+.back-button:hover {
+  cursor: pointer;
+  background-color: rgb(92, 92, 92);
+  color: white;
+}
