--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -174,13 +174,15 @@ circle {
 .back-button {
   width: 80px;
   height: 30px;
-  background-color: rgba(255, 255, 255, 0.863);
-  border: 1px solid black;
+
+  background-color: transparent;
+  color: white;
+  border: 1px solid white;
+
   border-radius: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: black;
   position: fixed;
   left: 100px;
   top: 100px;
@@ -188,6 +190,62 @@ circle {
 }
 .back-button:hover {
   cursor: pointer;
-  background-color: rgb(92, 92, 92);
+  background-color: rgba(255, 255, 255, 0.863);
+  border: 1px solid black;
+  color: black;
+}
+.pictures-outer {
+  position: fixed;
+  width: 80%;
+  height: 100vh;
+  top: 0px;
+  right: 50%;
+  z-index: 4;
+  margin-right: -40%;
+}
+.pictures-left-button,
+.pictures-right-button {
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: 1px solid white;
+  top: 50%;
+  margin-top: -25px;
+  transition: 0.3s;
+}
+.pictures-left-button:hover,
+.pictures-right-button:hover {
+  background-color: rgba(255, 255, 255, 0.438);
+  cursor: pointer;
+}
+.pictures-left-button {
+  left: 7%;
+}
+.pictures-right-button {
+  right: 7%;
+}
+.pic-icon {
+  width: 30px;
+  height: 30px;
+  position: fixed;
+  z-index: 5;
   color: white;
+  transform: rotate(0deg);
+}
+.icon-left {
+  left: 7%;
+  margin-left: 10px;
+  top: 50%;
+  margin-top: -15px;
+}
+.icon-right {
+  position: absolute;
+  margin-left: 110px;
+  top: 10px;
+  width: 30px;
+  height: 30px;
 }
