--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -23,7 +23,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin-left: 50px;
   scale: 0.8;
 }
