--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -392,3 +392,48 @@ circle {
 .picture-nine-true-and-more {
   background-image: url("../assets/images/20.jpg");
 }
+
+.nav-outer-two {
+  width: 100%;
+  height: 40px;
+  position: fixed;
+  top: 0px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #3a3a1f;
+  z-index: 3;
+  opacity: 1;
+  transition: 1s;
+}
+.nav-sub-two {
+  margin-top: 5px;
+  height: 50%;
+  display: flex;
+  align-items: center;
+  font-size: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  text-decoration: none;
+  border: none;
+  color: white;
+}
+.nav-line-hover-false-two {
+  width: 0.1%;
+  height: 1px;
+  background-color: rgb(255, 255, 255);
+  transition: 0.3s;
+}
+.nav-line-hover-true-two {
+  width: 100%;
+  height: 1px;
+  background-color: white;
+  transition: 0.3s;
+}
+.oak-logo {
+  transform: rotate(0deg);
+  filter: invert(93%) sepia(92%) saturate(27%) hue-rotate(35deg)
+    brightness(107%) contrast(106%);
+  scale: 0.55;
+  margin-left: 10px;
+  margin-top: 10px;
+}
