--- a/src/styles/SelectedWorks.css
+++ b/src/styles/SelectedWorks.css
@@ -56,6 +56,7 @@
   font-size: 12px;
   overflow: hidden;
   transition: 1.5s ease-in;
+  color: black;
 }
 .selected-works-button:hover {
   cursor: pointer;
