--- a/src/styles/Contacts.css
+++ b/src/styles/Contacts.css
@@ -76,6 +76,12 @@
 .map-box-outer {
   height: 70%;
   width: 75%;
+  display: flex;
+  align-items: center;
+}
+.map-container {
+  width: 100%;
+  height: 80%;
 }
 .contact-info-box-outer {
   width: 100%;
@@ -106,8 +112,12 @@
   display: flex;
   flex-wrap: wrap;
   padding-left: 50px;
+  opacity: 1;
+  transition: 2s;
 }
-
+.contact-false {
+  opacity: 0;
+}
 container {
   width: 80%;
   height: 60px;
