--- a/src/styles/Contacts.css
+++ b/src/styles/Contacts.css
@@ -78,20 +78,78 @@
   width: 75%;
   display: flex;
   align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  opacity: 1;
+  transition: 2s;
 }
 .map-container {
-  width: 100%;
-  height: 80%;
+  width: 80%;
+  height: 70%;
   transition: 2s;
   opacity: 1;
 }
 .map-false {
   opacity: 0;
 }
+.where-we-work-outer {
+  width: 80%;
+  height: 100px;
+  margin-bottom: -80px;
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 14px;
+  transition: 2s;
+  opacity: 1;
+}
+
+.where-we-work-text-header {
+  width: 100%;
+  height: 30%;
+  font-weight: 600;
+}
+.where-we-work-text-sub-header {
+  width: 300px;
+  height: 20%;
+  margin-top: -20px;
+  color: gray;
+}
 .contact-info-box-outer {
   width: 100%;
   height: 30%;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.contact-info-box-inner {
+  width: 60%;
+  height: 70%;
+  font-size: 16px;
+  opacity: 1;
+  transition: 2s;
+}
+.info-box-false {
+  opacity: 0;
+}
+.contact-info-header {
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+.contact-info-email {
+  color: gray;
+  height: 50px;
+}
+.wide {
+  width: 100%;
+  height: 30px;
+}
+.contact-info-number-one {
+  margin-top: 20px;
+  color: gray;
+}
+.contact-info-number-two {
+  color: gray;
 }
 .line-above-contact-info {
   position: absolute;
