--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -21,12 +21,14 @@
   position: relative;
   overflow: hidden;
 }
+
 .about-middle-line {
   width: 1px;
   height: 100%;
   background-color: rgb(202, 202, 202);
   position: absolute;
   right: 0px;
+  top: 0px;
   transition: 1.8s;
   opacity: 1;
 }
@@ -35,11 +37,10 @@
   opacity: 0;
 }
 .about-video {
-  width: 40%;
-  height: 400px;
-  background-color: lightgray;
+  width: 50%;
+  height: 60%;
   position: absolute;
-  z-index: 11;
+  z-index: 7;
 }
 .about-header {
   width: 900px;
@@ -48,7 +49,7 @@
   border: 1px solid rgb(202, 202, 202);
   position: absolute;
   top: 40px;
-  z-index: 5;
+  z-index: 8;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -67,7 +68,7 @@
 }
 .about-left-box-two {
   width: 40%;
-  height: 60%;
+  height: 58%;
   position: absolute;
   top: 200px;
   left: 100px;
@@ -118,5 +119,22 @@
   background-color: white;
   position: absolute;
   right: 0px;
+  z-index: 6;
+}
+.about-contact-button {
+  width: 100px;
+  height: 40px;
+  position: absolute;
+  bottom: 100px;
+  background-color: white;
   z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgb(202, 202, 202);
+  transition: 0.3s;
+}
+.about-contact-button:hover {
+  cursor: pointer;
+  background-color: rgb(202, 202, 202);
 }
