--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -442,3 +442,72 @@ circle {
   margin-top: 10px;
   transition: 0.3s;
 }
+
+.two-nav-lines-outer {
+  width: 60px;
+  height: 80px;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  display: flex;
+  align-items: center;
+  padding-left: 30px;
+}
+.two-nav-lines-outer:hover {
+  cursor: pointer;
+}
+.two-nav-lines-inner {
+  width: 50%;
+  height: 28%;
+  display: flex;
+  align-content: space-between;
+  flex-wrap: wrap;
+}
+.two-navline {
+  width: 100%;
+  height: 2px;
+  background-color: rgba(255, 255, 255, 0.76);
+}
+.two-dropdown {
+  width: 200px;
+  height: 150px;
+  position: absolute;
+  right: 0px;
+  top: 70px;
+}
+
+.two-nav-home,
+.two-nav-projects,
+.two-nav-about,
+.two-nav-contact {
+  width: 100%;
+  height: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: white; */
+  text-decoration: none;
+  color: white;
+}
+.two-nav-home:hover,
+.two-nav-projects:hover,
+.two-nav-about:hover,
+.two-nav-contact:hover {
+  background-color: #47472f;
+}
+@media screen and (max-width: 1100px) {
+  .nav-sub-two {
+    opacity: 0;
+  }
+  .two-nav-lines-outer {
+    opacity: 1;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .nav-sub-two {
+    opacity: 1;
+  }
+  .two-nav-lines-outer {
+    opacity: 0;
+  }
+}
