--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,7 +1,7 @@
 .about-outer {
   width: 100%;
   height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 .about-inner {
   width: 100%;
@@ -137,4 +137,84 @@
 .about-contact-button:hover {
   cursor: pointer;
   background-color: rgb(202, 202, 202);
+}
+
+.about-inner-top-line,
+.about-inner-bottom-line {
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: black;
+  transition: 2.8s;
+  opacity: 1;
+}
+.about-inner-top-line {
+  top: 0px;
+}
+.about-inner-bottom-line {
+  bottom: 0px;
+}
+
+@media screen and (max-width: 1200px) {
+  .about-outer {
+    overflow: auto;
+  }
+  .about-inner {
+    margin-top: 45vh;
+    overflow: visible;
+  }
+  .about-left,
+  .about-right {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .cover-scrollbar {
+    opacity: 0;
+  }
+  .about-header {
+    top: -300px;
+  }
+  .about-video {
+    top: -280px;
+  }
+  .about-right-box-one,
+  .about-left-box-one {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    left: 0px;
+  }
+
+  .about-right-box-two,
+  .about-left-box-two {
+    width: 80%;
+    height: 100%;
+    text-align: center;
+  }
+  .about-left {
+    height: 600px;
+    display: flex;
+    justify-content: flex-start;
+  }
+  .about-left-box-two,
+  .about-right-box-two {
+    left: 50%;
+    margin-left: -40%;
+  }
+  .about-right {
+    margin-top: -100px;
+  }
+  .cover-scrollbar,
+  .about-middle-line,
+  .about-inner-top-line,
+  .about-inner-bottom-line {
+    display: none;
+  }
+  .about-contact-button {
+    bottom: -400px;
+  }
+  .about-header {
+    width: 80%;
+  }
 }
