--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -205,3 +205,190 @@
   background-color: white;
   transition: 3s;
 }
+
+.landing-nav-outer {
+  width: 100%;
+  height: 40px;
+  position: fixed;
+  top: 0px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: white;
+  z-index: 9;
+  opacity: 1;
+  transition: 1s;
+}
+.landing-nav-inner {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.landing-nav-logo {
+  width: 150px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid black; */
+  margin-left: 50px;
+  scale: 0.8;
+}
+
+.landing-nav-sub {
+  margin-top: 5px;
+  height: 50%;
+  display: flex;
+  align-items: center;
+  font-size: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  text-decoration: none;
+  border: none;
+  color: #3a3a1f;
+}
+.landing-nav-sub:hover,
+.landing-nav-logo:hover {
+  cursor: pointer;
+}
+
+.landing-nav-line-hover-false {
+  width: 1%;
+  height: 1px;
+  background-color: rgb(255, 255, 255);
+  transition: 0.3s;
+}
+
+.landing-nav-line-hover-true {
+  width: 100%;
+  height: 1px;
+  background-color: black;
+  transition: 0.3s;
+}
+
+.transparent {
+  opacity: 0;
+}
+
+.landing-nav-lines-outer {
+  width: 60px;
+  height: 80px;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  display: flex;
+  align-items: center;
+  padding-left: 30px;
+}
+.landing-nav-lines-outer:hover {
+  cursor: pointer;
+}
+.landing-nav-lines-inner {
+  width: 50%;
+  height: 28%;
+  display: flex;
+  align-content: space-between;
+  flex-wrap: wrap;
+}
+.landing-navline {
+  width: 100%;
+  height: 2px;
+  background-color: gray;
+}
+.landing-dropdown {
+  width: 200px;
+  height: 150px;
+  position: absolute;
+  right: 0px;
+  top: 70px;
+}
+
+.landing-nav-home,
+.landing-nav-projects,
+.landing-nav-about,
+.landing-nav-contact {
+  width: 100%;
+  height: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  text-decoration: none;
+  color: #3a3a1f;
+}
+.landing-nav-home:hover,
+.landing-nav-projects:hover,
+.landing-nav-about:hover,
+.landing-nav-contact:hover {
+  background-color: rgb(228, 228, 228);
+}
+
+@media screen and (max-width: 2250px) {
+  .landing-outer {
+    width: 75%;
+  }
+
+  .landing-top-inner {
+    scale: 0.8;
+    background-color: white;
+    width: 5%;
+    padding-left: 0px;
+  }
+
+  .heading-letter-container {
+    padding: 5px;
+  }
+  .landing-nav-outer {
+    width: 100%;
+  }
+  /* .cover-lines-after-animation,
+  .landing-top-lines,
+  .landing-lines-outer,
+  #root,
+  body {
+    width: 100%;
+  } */
+}
+@media screen and (max-width: 1900px) {
+  .landing-top-inner {
+    scale: 0.7;
+  }
+}
+@media screen and (max-width: 1650px) {
+  .landing-top-inner {
+    scale: 0.6;
+  }
+}
+@media screen and (max-width: 1450px) {
+  .landing-top-inner {
+    scale: 0.5;
+  }
+  .landing-top {
+    align-items: center;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .landing-top-inner {
+    scale: 0.4;
+  }
+  .landing-top {
+    align-items: flex-start;
+  }
+}
+@media screen and (max-width: 1100px) {
+  .landing-nav-sub {
+    opacity: 0;
+  }
+  .landing-nav-lines-outer {
+    opacity: 1;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .landing-nav-sub {
+    opacity: 1;
+  }
+  .landing-nav-lines-outer {
+    opacity: 0;
+  }
+}
